# openssl

./: README.md  generator.sh  meson.build  meson.build.tmpl  meson_options.txt
apps/: ocsp.c  speed.c
crypto/: armcap.c  armcap.c.orig  armcap.c.rej
crypto/rand/: rand_unix.c.orig
generated-config/archs/BSD-aarch64/asm/: meson.build
generated-config/archs/BSD-aarch64/asm/crypto/: params_idx.c
generated-config/archs/BSD-aarch64/no-asm/: meson.build
generated-config/archs/BSD-aarch64/no-asm/crypto/: params_idx.c
generated-config/archs/BSD-generic64/asm/: meson.build
generated-config/archs/BSD-generic64/asm_avx2/: meson.build
generated-config/archs/BSD-generic64/no-asm/: meson.build
generated-config/archs/BSD-x86/asm/: meson.build
generated-config/archs/BSD-x86/asm/crypto/: params_idx.c
generated-config/archs/BSD-x86/asm_avx2/: meson.build
generated-config/archs/BSD-x86/no-asm/: meson.build
generated-config/archs/BSD-x86/no-asm/crypto/: params_idx.c
generated-config/archs/BSD-x86_64/asm/: meson.build
generated-config/archs/BSD-x86_64/asm/crypto/: params_idx.c
generated-config/archs/BSD-x86_64/asm_avx2/: meson.build
generated-config/archs/BSD-x86_64/no-asm/: meson.build
generated-config/archs/BSD-x86_64/no-asm/crypto/: params_idx.c
generated-config/archs/VC-WIN32/asm/: meson.build
generated-config/archs/VC-WIN32/asm_avx2/: meson.build
generated-config/archs/VC-WIN32/no-asm/: meson.build
generated-config/archs/VC-WIN64-ARM/no-asm/: meson.build
generated-config/archs/VC-WIN64A/asm/: meson.build
generated-config/archs/VC-WIN64A/asm_avx2/: meson.build
generated-config/archs/VC-WIN64A/no-asm/: meson.build
generated-config/archs/darwin-armv7-cc/asm/: meson.build
generated-config/archs/darwin-armv7-cc/asm/crypto/: armv4cpuid.S  params_idx.c
generated-config/archs/darwin-armv7-cc/asm_avx2/: meson.build
generated-config/archs/darwin-armv7-cc/no-asm/: meson.build
generated-config/archs/darwin-armv7-cc/no-asm/crypto/: params_idx.c
generated-config/archs/darwin-i386-cc/asm/: meson.build
generated-config/archs/darwin-i386-cc/asm/crypto/: params_idx.c
generated-config/archs/darwin-i386-cc/asm_avx2/: meson.build
generated-config/archs/darwin-i386-cc/no-asm/: meson.build
generated-config/archs/darwin-i386-cc/no-asm/crypto/: params_idx.c
generated-config/archs/darwin64-arm64-cc/asm/: meson.build
generated-config/archs/darwin64-arm64-cc/asm/crypto/: params_idx.c
generated-config/archs/darwin64-arm64-cc/asm_avx2/: meson.build
generated-config/archs/darwin64-arm64-cc/no-asm/: meson.build
generated-config/archs/darwin64-arm64-cc/no-asm/crypto/: params_idx.c
generated-config/archs/darwin64-x86_64-cc/asm/: meson.build
generated-config/archs/darwin64-x86_64-cc/asm_avx2/: meson.build
generated-config/archs/darwin64-x86_64-cc/no-asm/: meson.build
generated-config/archs/linux-aarch64/asm/: meson.build
generated-config/archs/linux-aarch64/asm_avx2/: meson.build
generated-config/archs/linux-aarch64/no-asm/: meson.build
generated-config/archs/linux-armv4/asm/: meson.build
generated-config/archs/linux-armv4/asm_avx2/: meson.build
generated-config/archs/linux-armv4/no-asm/: meson.build
generated-config/archs/linux-elf/asm/: meson.build
generated-config/archs/linux-elf/asm_avx2/: meson.build
generated-config/archs/linux-elf/no-asm/: meson.build
generated-config/archs/linux-mips32/asm/: meson.build
generated-config/archs/linux-mips32/asm_avx2/: meson.build
generated-config/archs/linux-mips32/no-asm/: meson.build
generated-config/archs/linux-ppc/asm/: meson.build
generated-config/archs/linux-ppc/asm_avx2/: meson.build
generated-config/archs/linux-ppc/no-asm/: meson.build
generated-config/archs/linux-ppc64/asm/: meson.build
generated-config/archs/linux-ppc64/asm_avx2/: meson.build
generated-config/archs/linux-ppc64/no-asm/: meson.build
generated-config/archs/linux-ppc64le/asm/: meson.build
generated-config/archs/linux-ppc64le/asm_avx2/: meson.build
generated-config/archs/linux-ppc64le/no-asm/: meson.build
generated-config/archs/linux-x32/asm/: meson.build
generated-config/archs/linux-x32/asm_avx2/: meson.build
generated-config/archs/linux-x32/no-asm/: meson.build
generated-config/archs/linux-x86/asm/: meson.build
generated-config/archs/linux-x86/no-asm/: meson.build
generated-config/archs/linux-x86_64/asm/: meson.build
generated-config/archs/linux-x86_64/asm_avx2/: meson.build
generated-config/archs/linux-x86_64/no-asm/: meson.build
generated-config/archs/linux32-s390x/asm/: meson.build
generated-config/archs/linux32-s390x/asm_avx2/: meson.build
generated-config/archs/linux32-s390x/no-asm/: meson.build
generated-config/archs/linux64-loongarch64/no-asm/: meson.build
generated-config/archs/linux64-mips64/asm/: meson.build
generated-config/archs/linux64-mips64/asm_avx2/: meson.build
generated-config/archs/linux64-mips64/no-asm/: meson.build
generated-config/archs/linux64-riscv64/no-asm/: meson.build
generated-config/archs/linux64-s390x/asm/: meson.build
generated-config/archs/linux64-s390x/asm_avx2/: meson.build
generated-config/archs/linux64-s390x/no-asm/: meson.build
generated-config/archs/qnx-arm/asm/: meson.build
generated-config/archs/qnx-arm/asm_avx2/: meson.build
generated-config/archs/qnx-arm/no-asm/: meson.build
generated-config/archs/qnx-x86/asm/: meson.build
generated-config/archs/qnx-x86/asm_avx2/: meson.build
generated-config/archs/qnx-x86/no-asm/: meson.build
generated-config/archs/solaris-x86-gcc/asm/: meson.build
generated-config/archs/solaris-x86-gcc/asm_avx2/: meson.build
generated-config/archs/solaris-x86-gcc/no-asm/: meson.build
generated-config/archs/solaris64-x86_64-gcc/asm/: meson.build
generated-config/archs/solaris64-x86_64-gcc/asm_avx2/: meson.build
generated-config/archs/solaris64-x86_64-gcc/no-asm/: meson.build
generator-patches/: node.patch  openssl-darwin.patch  openssl-qnx.patch
providers/implementations/rands/seeding/: rand_unix.c  rand_unix.c.rej
(+169 files in other folders)
